# kesten_sim

./: .gitignore  CMakeLists.txt  kestensim.h  kestensimulation.cpp  kestensimulation.h  main.cpp  main_mpi.cpp  main_mpi_quad.cpp  main_shared.h  mpikesten.cpp  mpikesten.h  quad_revreg.json  revreg.json  subcrit.json  test_kestensim.cpp
testdata/: initial_active.txt  turnover.txt  weights.txt
